# website

./: .gitignore  Cargo.toml  Makefile  README.md  optimizeCSS.js  package-lock.json
assets/md/: index.md
assets/sass/: main.scss
assets/static/: main.css
assets/ts/: index.ts
src/: config.rs  error.rs  main.rs  website.rs
