[package]
name = "website"
version = "1.0.0"
authors = ["Martin Gallagher <martin@martingallagher.com>"]
edition = "2018"

[dependencies]
actix-files = "0.1"
actix-web = { version = "1.0", default-features = false }
config = "0.9"
cssparser = "0.25"
html5minify = "0.1"
lazy_static = "1.3"
pulldown-cmark = { version = "0.5", default-features = false }
regex = "1.2"
serde = { version = "1.0", features = ["derive"] }
percent-encoding = "1.0"
