[package]
name = "website"
version = "1.0.0"
authors = ["Martin Gallagher <martin@martingallagher.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2"
actix-rt = "1.0"
actix-web = { version = "2.0", default-features = false }
config = "0.10"
cssparser = "0.27"
html5minify = "0.2"
lazy_static = "1.4"
percent-encoding = "1.0"
pulldown-cmark = { version = "0.8", default-features = false }
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "*"
